--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Django==3.2.6
 django-heroku==0.3.1
 django-rest-framework==0.1.0
 djangorestframework==3.12.4
+gunicorn==20.1.0
 psycopg2==2.9.1
 python-dotenv==0.17.1
 pytz==2021.1
